@@ -32,7 +32,7 @@ These ones are required to execute Deb-o-Matic:
 </ul>
 To enable additional features, you may want to install these packages:
 <ul>
-<li>python-pyinotify</li>
+<li>python-pyinotify (>= 0.8.6)</li>
 <li>gnupg</li>
 <li>lintian</li>
 </ul>
